--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:26.0.1'
     annotationProcessor 'org.jetbrains:annotations:26.0.1'
 
+    // me.jeremiah.minecraft dependencies
     compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
 
     // me.jeremiah.minecraft.hooks dependencies
@@ -29,10 +30,10 @@ dependencies {
     compileOnly 'com.zaxxer:HikariCP:6.2.1'
     compileOnly 'org.xerial:sqlite-jdbc:3.47.2.0'
     compileOnly 'com.h2database:h2:2.3.232'
+    compileOnly 'com.mysql:mysql-connector-j:9.1.0'
     compileOnly 'org.mariadb.jdbc:mariadb-java-client:3.5.1'
     compileOnly 'org.postgresql:postgresql:42.7.4'
     compileOnly 'org.mongodb:mongodb-driver-sync:5.3.0-beta0'
-    compileOnly 'redis.clients:jedis:5.3.0-beta1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -42,13 +43,14 @@ dependencies {
     testImplementation 'org.jetbrains:annotations:26.0.1'
     testAnnotationProcessor 'org.jetbrains:annotations:26.0.1'
 
+    testImplementation 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
+
     testRuntimeOnly 'com.zaxxer:HikariCP:6.2.1'
     testRuntimeOnly 'org.xerial:sqlite-jdbc:3.47.2.0'
     testRuntimeOnly 'com.h2database:h2:2.3.232'
     testRuntimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.5.1'
     testRuntimeOnly 'org.postgresql:postgresql:42.7.4'
     testRuntimeOnly 'org.mongodb:mongodb-driver-sync:5.3.0-beta0'
-    testRuntimeOnly 'redis.clients:jedis:5.3.0-beta1'
 }
 
 test {
