--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     compileOnly 'org.postgresql:postgresql:42.7.4'
     compileOnly 'org.mongodb:mongodb-driver-sync:5.3.0-beta0'
 
+    // me.jeremiah.data.ByteTranslatable dependencies
+    implementation 'com.esotericsoftware:kryo:5.6.2'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
